force-app/main/default/objects/MasterBillingPaymentRequest__c/MasterBillingPaymentRequest__c.object-meta.xml
<CustomObject>
    <label>Master Billing + Payment Request</label>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Billing + Payment Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Billing + Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>