force-app/main/default/objects/MasterBillingPaymentRequest__c/fields/MasterBilling__c.field-meta.xml
<CustomField>
    <fullName>MasterBilling__c</fullName>
    <label>Master Billing</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Master Billing + Payment Requests</relationshipLabel>
    <relationshipName>Master_Billing_Payment_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>