force-app/main/default/objects/MasterBillingPaymentRequest__c/fields/PaymentRequest__c.field-meta.xml
<CustomField>
    <fullName>PaymentRequest__c</fullName>
    <label>Payment Request</label>
    <referenceTo>OperationPaymentRequest__c</referenceTo>
    <relationshipLabel>Master Billing + Payment Requests</relationshipLabel>
    <relationshipName>Master_Billing_Payment_Requests</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>