force-app/main/default/objects/MasterBillingPaymentRequest__c/fields/TotalBuyingInclTaxVND__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxVND__c</fullName>
    <label>Total Buying Incl Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>