force-app/main/default/objects/MasterBillingPaymentRequest__c/fields/UnitPriceofBuyingVND__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingVND__c</fullName>
    <label>Unit Price of Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>